--- a/sass/_utils.scss
+++ b/sass/_utils.scss
@@ -1,5 +1,6 @@
 $rootUnit: 16px !default;
-$breakpoint: 768px; //테블릿 화면크기
+$breakpointdesktop: 1024px; //컴퓨터 화면크기
+$breakpointTablet: 768px; //테블릿 화면크기
 
 //function
 @function removeUnit($value) {
@@ -24,12 +25,7 @@ $breakpoint: 768px; //테블릿 화면크기
   }
 } //flaot-clear
 
-@mixin autoMargin($marginX: auto){
-  margin-left: $marginX;
-  margin-right: $marginX;
-}
-
-@mixin marginX($marginValue: auto) {
+@mixin marginAutoX($marginValue: auto) {
   margin-left: $marginValue;
   margin-right: $marginValue;
 } //가로로 가운데
@@ -46,20 +42,26 @@ $breakpoint: 768px; //테블릿 화면크기
   width: $width;
   padding-left: $paddingX;
   padding-right: $paddingX;
-  @include marginX;
+  @include marginAutoX;
   @content;
 }
 
 
 // 반응형
 @mixin mobile {
-  @media screen and (min-width: $breakpoint - 1) {
+  @media screen and (max-width: $breakpointTablet - 1) {
     @content;
   }
 }
 
 @mixin tablet {
-  @media screen and (min-width: $breakpoint) {
+  @media screen and (min-width: $breakpointTablet) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media screen and (min-width: $breakpointdesktop) {
     @content;
   }
 }
@@ -69,7 +71,7 @@ $breakpoint: 768px; //테블릿 화면크기
 // flex
 @mixin flexBox($direction: row, $justify: flex-start, $align: stretch, $wrap: nowrap) {
   display: flex;
-  flex-direction: $breakpoint;
+  flex-direction: $direction;
   justify-content: $justify;
   align-items: $align;
   flex-wrap: $wrap;
