--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -415,6 +416,11 @@ ul, ol, li, dl, dt, dd {
   border-radius: 2px;
 }
 
+.is-btnBox__link {
+  text-decoration: none;
+  color: inherit;
+}
+
 footer {
   width: 100vw;
 }
@@ -442,49 +448,61 @@ body {
 }
 @media screen and (max-width: 767px) {
   .container {
-    width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-left: auto;
-    margin-right: auto;
     font-size: 0.8125em;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 1023px) {
   .container {
-    width: 100vw;
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: auto;
-    margin-right: auto;
     font-size: 0.875em;
   }
+}
+
+.header__wrap {
+  height: 5.75em;
+  z-index: 1000;
+}
+.header__wrap::after {
+  content: "";
+  display: block;
+  clear: both;
 }
 
 .header {
   width: 100vw;
   height: auto;
-  overflow: hidden;
+  padding-top: 1.875em;
+  padding-bottom: 1.875em;
+  background: #fff;
+  float: left;
+  position: fixed;
+  top: 0;
 }
 .header__logo {
-  width: 170px;
+  width: 150px;
   margin-left: auto;
   margin-right: auto;
 }
 .header__logo a {
   display: block;
 }
-@media screen and (max-width: 767px) {
-  .header__logo {
-    width: 22.5%;
-    margin: 12px 0;
-  }
-}
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 1023px) {
   .header__logo {
     width: 130px;
     margin-top: 1.25em;
     margin-bottom: 1.25em;
+    margin-left: 1.875em;
+  }
+}
+@media screen and (max-width: 767px) {
+  .header__logo {
+    width: 22.5%;
+    margin-top: 1.875em;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .header {
+    padding-top: 0;
+    padding-bottom: 0;
   }
 }
 .header__menu a {
@@ -551,7 +569,7 @@ body {
   height: 27px;
   cursor: pointer;
   position: absolute;
-  right: 30px;
+  right: 1.875em;
   top: 2.5em;
   transition: all 300ms;
 }
@@ -563,6 +581,11 @@ body {
   width: 100%;
   height: 5px;
   background-color: #03141C;
+}
+@media screen and (max-width: 767px) {
+  .header__menu__open {
+    top: 2.125em;
+  }
 }
 .header__menuAll {
   width: 0vw;
@@ -580,7 +603,7 @@ body {
   width: 50vw;
   height: 100vh;
   opacity: 1;
-  z-index: 200;
+  z-index: 300;
 }
 .header__menuAll.active::after {
   content: "";
@@ -593,16 +616,18 @@ body {
 .header__menuAll.active .menu__close {
   display: inline-block;
   color: #fff;
-  font-size: 1.75em;
+  font-size: 2.375em;
+  height: 1.25em;
+  line-height: 1.125em;
   cursor: pointer;
-  transform: rotateZ(45deg);
+  transform: rotateZ(0deg);
   position: absolute;
-  top: 1.25em;
-  right: 1.25em;
+  top: 1em;
+  right: 1em;
   transition: all 200ms;
 }
 .header__menuAll.active .menu__close:hover, .header__menuAll.active .menu__close:focus {
-  transform: rotateZ(408deg);
+  transform: rotateZ(360deg);
 }
 @media screen and (max-width: 767px) {
   .header__menuAll.active {
@@ -630,6 +655,291 @@ body {
 .header__menuAll__step1 li a:hover, .header__menuAll__step1 li a:focus {
   padding-right: 0.9375em;
   background: url(../images/menuAll_hover.png) no-repeat right center/0.75em;
+}
+@media screen and (max-width: 1023px) {
+  .header__menuAll__step1 {
+    margin-top: 4.375em;
+  }
+}
+
+.visual {
+  width: 100vw;
+  max-width: 1920px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+.visual__wrap::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.visual__item {
+  padding-right: 0 5.3125em;
+  position: relative;
+}
+.visual__item__image {
+  width: 50%;
+  min-width: 750px;
+  max-width: 968px;
+  height: auto;
+  opacity: 0;
+}
+.visual__item__content {
+  width: 100%;
+  max-width: 75em;
+  text-align: right;
+  position: absolute;
+  bottom: 3vw;
+  right: 2.5em;
+}
+.visual__item__content__title {
+  font-family: "Black Han Sans";
+  font-size: 4.75em;
+  font-weight: 400;
+  letter-spacing: -0.0625em;
+  color: inherit;
+  padding-bottom: 0.4375em;
+  opacity: 0;
+}
+.visual__item__content__text {
+  font-family: "Noto Sans KR";
+  font-size: 1.875em;
+  font-weight: 700;
+  letter-spacing: -0.09375em;
+  color: inherit;
+  line-height: 1.5em;
+  padding-bottom: 3.5em;
+  padding-right: 0.1875em;
+  opacity: 0;
+}
+.visual__item__content__text span {
+  display: block;
+}
+.visual__item__content__btnBox {
+  opacity: 0;
+}
+.visual__item.swiper-slide-active .visual__item__image {
+  opacity: 1;
+  transition: opacity 1.6s 0.1s;
+}
+.visual__item.swiper-slide-active .visual__item__content__title {
+  opacity: 1;
+  transition: opacity 1.6s 1s;
+}
+.visual__item.swiper-slide-active .visual__item__content__text {
+  opacity: 1;
+  transition: opacity 2s 1.6s;
+}
+.visual__item.swiper-slide-active .visual__item__content__text span {
+  display: block;
+}
+.visual__item.swiper-slide-active .visual__item__content__btnBox {
+  opacity: 1;
+  transition: opacity 2.2s 2s;
+}
+.visual__item.swiper-slide-prve {
+  opacity: 0;
+  transition: opacity 2s;
+}
+.visual__navigation {
+  text-align: right;
+  position: absolute;
+  bottom: 2.5vw;
+  right: 4.625em;
+  z-index: 2;
+}
+.visual__navigation .swiper-button-prev.is-prev,
+.visual__navigation .swiper-button-next.is-next {
+  width: fit-content;
+  height: auto;
+  margin-top: 0;
+  z-index: auto;
+  cursor: pointer;
+  display: inline-block;
+  color: inherit;
+  font-weight: 100;
+  position: unset;
+  top: unset;
+  left: unset;
+  right: unset;
+}
+.visual__navigation .swiper-button-prev.is-prev::after,
+.visual__navigation .swiper-button-next.is-next::after {
+  font-size: 2.5em;
+}
+.visual__navigation .swiper-button-prev.is-prev::after {
+  content: "⟵";
+}
+.visual__navigation .swiper-button-next.is-next::after {
+  content: "⟶";
+}
+.visual__state {
+  position: relative;
+  bottom: 510px;
+  text-align: right;
+  right: 5.25em;
+  z-index: 1;
+}
+.visual__stateBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  display: inline-flex;
+  width: 160px;
+}
+.visual__stateBox .stopPlay {
+  width: 14px;
+  text-align: center;
+}
+.visual__stateBox .stopPlay button {
+  width: 14px;
+  height: 16px;
+  line-height: 14px;
+  background-color: rgba(253, 93, 95, 0);
+  color: #03141C;
+  font-weight: 700;
+  font-size: 1.125em;
+  border: 0;
+  padding-bottom: 0.1875em;
+  cursor: pointer;
+}
+.visual__stateBox .swiper-pagination-bullets {
+  width: 121px;
+  position: relative;
+}
+.visual__stateBox .swiper-pagination-bullets .swiper-pagination-bullet {
+  color: #03141C;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.visual__stateBox .swiper-pagination-bullets .swiper-pagination-bullet::after {
+  content: "";
+  display: block;
+  width: 0em;
+  height: 2px;
+  margin-left: 1.25em;
+  margin-top: -9px;
+  background-color: #03141C;
+}
+.visual__stateBox .swiper-pagination-bullets .swiper-pagination-bullet-active {
+  opacity: 1;
+}
+.visual__stateBox .swiper-pagination-bullets .swiper-pagination-bullet-active::after {
+  width: 105px;
+  transition: 4400ms;
+}
+.visual__stateBox .visual__state__totalPage {
+  padding-left: 0.625em;
+}
+.visual__state .swiper-pagination-bullet,
+.visual__state .swiper-pagination-bullet-active {
+  background-color: unset;
+}
+@media screen and (max-width: 1023px) {
+  .visual {
+    width: 100vw;
+    position: relative;
+    left: 50%;
+    margin-left: -50vw;
+  }
+  .visual__item__image {
+    width: 100vw;
+    min-width: unset;
+    max-width: unset;
+    overflow: hidden;
+  }
+  .visual__item__content {
+    width: 100vw;
+    max-width: 943px;
+    padding-left: 1em;
+    padding-right: 0;
+    padding-top: 2.125em;
+    text-align: left;
+    position: unset;
+    bottom: unset;
+    right: unset;
+  }
+  .visual__item__content__title {
+    font-family: "Black Han Sans";
+    font-size: 2.875em;
+    font-weight: 400;
+    letter-spacing: -0.0625em;
+    color: inherit;
+    padding-bottom: 0.3125em;
+  }
+  .visual__item__content__text {
+    font-family: "Noto Sans KR";
+    font-size: 1.5em;
+    font-weight: 700;
+    letter-spacing: -0.09375em;
+    color: inherit;
+    padding-bottom: 1.875em;
+  }
+  .visual__navigation {
+    bottom: 15em;
+    right: 2.25em;
+  }
+  .visual__navigation .swiper-button-prev.is-prev,
+.visual__navigation .swiper-button-next.is-next {
+    padding: 0.3125em;
+    margin-left: 0.3125em;
+  }
+  .visual__navigation .swiper-button-prev.is-prev::after,
+.visual__navigation .swiper-button-next.is-next::after {
+    font-size: 1.75em;
+  }
+  .visual__state {
+    text-align: left;
+    bottom: 15.625em;
+    left: 2.25em;
+    right: unset;
+  }
+}
+@media screen and (max-width: 767px) {
+  .visual__item__content {
+    max-width: unset;
+    padding-left: 0.5625em;
+    padding-top: 1.5em;
+  }
+  .visual__item__content__title {
+    font-family: "Black Han Sans";
+    font-size: 2.125em;
+    font-weight: 400;
+    letter-spacing: -0.0625em;
+    color: inherit;
+  }
+  .visual__item__content__title span {
+    display: block;
+    width: 100%;
+  }
+  .visual__item__content__text {
+    font-family: "Noto Sans KR";
+    font-size: 1.0625em;
+    font-weight: 700;
+    letter-spacing: -0.09375em;
+    color: inherit;
+  }
+  .visual__item__content__text span {
+    display: block;
+    width: 100%;
+  }
+  .visual__navigation {
+    bottom: 14.25em;
+    right: 0.75em;
+  }
+  .visual__navigation .swiper-button-prev.is-prev::after,
+.visual__navigation .swiper-button-next.is-next::after {
+    font-size: 1.5em;
+  }
+  .visual__state {
+    bottom: 14.6875em;
+    left: 1.25em;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
