--- a/sass/_visual.scss
+++ b/sass/_visual.scss
@@ -1,8 +1,7 @@
 .visual {
 
-  width: 100vw;
-  max-width: 1920px;
-  @include marginAutoX;
+  width: 100%;
+  max-width: 1820px;
 
   position: relative;
 
@@ -11,7 +10,6 @@
   }
 
   &__item {
-    padding-right: 0 em(85px);
 
     position: relative;
 
@@ -20,6 +18,7 @@
       min-width: 750px;
       max-width: 968px;
       height: auto;
+      overflow: hidden;
       opacity: 0;
     }
 
@@ -44,7 +43,6 @@
         
         line-height: em(24px);
         padding-bottom: em(56px);
-        padding-right: em(3px);
         opacity: 0;
 
         span {display: block;}
@@ -99,7 +97,7 @@
     text-align: right;
 
     position: absolute;
-    bottom: 2.5vw;
+    bottom: 1vw;
     right: em(74%);
     z-index: 2;
 
@@ -136,7 +134,7 @@
   }
 
   &__state {
-    position: relative;
+    position: absolute;
     bottom: 510px;
     text-align: right;
     right: em(84%);
